Bug 374430 - Investment Price Graph crashes
Summary: Investment Price Graph crashes
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-01 18:24 UTC by wojnilowicz
Modified: 2017-11-11 23:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Problematic database (79.20 KB, application/x-kmymoney)
2017-01-01 18:24 UTC, wojnilowicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2017-01-01 18:24:34 UTC
Created attachment 103129 [details]
Problematic database

1) Load my .kmy
2) go to Reports->Investments
3) choose Investment Price Graph 
4) crash
Comment 1 wojnilowicz 2017-01-08 19:34:01 UTC
Git commit 42058f8d02397a076270ec4446c57c552ce8e685 by Łukasz Wojniłowicz.
Committed on 08/01/2017 at 19:32.
Pushed by wojnilowicz into branch 'master'.

Block model signals during drawPivotRowSet

REVIEW: 129740
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +2    -0    kmymoney/reports/kreportchartview.cpp

https://commits.kde.org/kmymoney/42058f8d02397a076270ec4446c57c552ce8e685