Block model signals during drawPivotRowSet

REVIEW: 129740
BUG: 374430
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>